Fix copyright text wrapping

--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -12,3 +12,9 @@ footer {
 #footerText {
     color: #383838;
 }
+
+@media only screen and (max-width: 478px) {
+    #footerText {
+        font-size: 12px;
+    }
+}
